unpackaged/main/default/objects/Story__c/fields/Accessory_Type__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessory Type</label>
    <referenceTo>Accessory_Type__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>